add org info page

--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -69,7 +69,7 @@
     </nav>
 
     <header>
-        <div class="header-content">
+        <!-- <div class="header-content">
             <div class="header-img"><img src="/static/pages/img/pigman.png" id="porkimg"></div>
             <div class="header-content-inner">
                 <h1>豬肉俠公益地圖</h1>
@@ -77,8 +77,28 @@
                 <h3>"人人有肉吃，就是我的俠義之道"</h3>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">瞭解更多</a>
             </div>
-        </div>
+        </div> -->
     </header>
+    <section id="welcome">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-box">
+                        <div class="header-img"><img src="/static/pages/img/pigman.png" id="porkimg"></div>
+                    </div>
+                </div>
+                <div class="col-lg-8 col-md-6 text-center">
+                    <div class="header-content-inner">
+                        <h1>豬肉俠公益地圖</h1>
+                        <hr>
+                        <h3>"人人有肉吃，就是我的俠義之道"</h3>
+                        <a href="#about" class="btn btn-primary btn-xl page-scroll">瞭解更多</a>
+                    </div>           
+                </div>
+            </div>           
+        </div>
+    </section>
+
 
     <section class="bg-primary" id="about">
         <div class="container">
@@ -111,7 +131,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="row">
+            <div class="row" style="margin: 30px;">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-usd wow bounceIn text-primary"></i>
@@ -146,23 +166,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <a href="/" class="btn btn-primary btn-xl wow tada" style="margin-top: 20px;">開始使用地圖</a>
+                    <a href="/" class="btn btn-primary btn-xl wow tada" style="margin: 60px 0px 0px;">開始使用地圖</a>
                 </div>
             </div>
                         
         </div>
         
     </section>
-
-
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>想要參加更多不同的活動嗎？</h2>
-                <a class="btn btn-default btn-xl wow tada">瀏覽所有活動</a>
-            </div>
-        </div>
-    </aside>
 
     <section id="contact">
         <div class="container">
@@ -174,11 +184,11 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn" style="color: #37b34a;"></i>
-                    <p style="color: #37b34a;">(02)2230-7715</p>
+                    <p style="color: #37b34a;">+886 2 2752 8851</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s" style="color: #37b34a;"></i>
-                    <p><a href="mailto:your-email@your-domain.com" style="color: #37b34a;">feedback@gliacloud.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com" style="color: #37b34a;">info@gliacloud.com</a></p>
                 </div>
             </div>
         </div>
