--- a/map/static/css/main.css
+++ b/map/static/css/main.css
@@ -1912,10 +1912,8 @@
 
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
-			background: #2e3842;
+			background: #FFFA8A;
 			background-size: 20px 20px;
-			color: #fff;
-			/*content: '\f00c';*/
 			margin-bottom: 5px;			
 		}
 
@@ -3321,13 +3319,14 @@
 					border: 0;
 					color: inherit;
 					display: block;
-					font-size: 0.8em;
-					letter-spacing: 0.225em;
+					font-size: 1.15em;
+					letter-spacing: 0em;
 					outline: 0;
 					text-decoration: none;
 					text-transform: uppercase;
 					box-shadow: inset 0 0 0 2px #ffe24d;
 					color: #ffe24d;
+
 				}
 					#menu ul > li > a:hover {
 						color: #331A00;
@@ -3343,7 +3342,7 @@
 					#menu ul > li > div > select:hover,
 					#menu ul > li > div > label {
 						color: #ffe24d;
-						font-size: 13pt !important
+						font-size: 1.2em !important
 					}
 
 		@media screen and (max-width: 736px) {
