--- a/pages/static/pages/css/home.css
+++ b/pages/static/pages/css/home.css
@@ -69,7 +69,7 @@
   }
 }
 header {
-  position: relative;
+/*  position: relative;
   width: 100%;
   min-height: auto;
   -webkit-background-size: cover;
@@ -79,9 +79,9 @@ header {
   background-position: center; 
   background-image: url('/static/pages/img/ball.jpg'); 
   background-repeat: no-repeat;
-  text-align: center;
+  text-align: center;*/
 }
-header .header-img {
+/*header .header-img {
   width: 300px;
   height: 500px;
   background-repeat: no-repeat;
@@ -109,11 +109,11 @@ header .header-content .header-content-inner h3 {
   font-size: 30px;
   margin-bottom: 50px;
   font-style: italic;
-}
-@media (min-width: 768px) {
+}*/
+/*@media (min-width: 768px) {
   header {
-    min-height: 100%;
-  }
+    /*min-height: 100%;*/
+  /*}
   header .header-content {
     position: absolute;
     top: 50%;
@@ -134,21 +134,92 @@ header .header-content .header-content-inner h3 {
     margin-right: auto;
     color: #37b34a;
   }
+}*/
+#welcome {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-position: center; 
+  background-image: url('/static/pages/img/ball.jpg'); 
+  background-repeat: repeat;
+  text-align: center;
+}
+#welcome .container {
+  position: relative;
+  width: 60%;
+}
+.header-img {
+  width: 300px;
+  height: 500px;
+  margin: auto;
+}
+.header-content-inner {
+  position: relative;
+  text-align: center;
+  padding: 130px 0px;
+}
+.header-content-inner h1 {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #000;
+}
+.header-content-inner hr {
+  margin: 30px auto;
+}
+.header-content-inner h3 {
+  font-weight: 300;
+  color: #000;
+  font-size: 30px;
+  margin-bottom: 50px;
+  font-style: italic;
+}
+
+@media (min-width: 768px) {
+  #welcome {
+    min-height: 100%;
+    /*max-width: 60%;*/
+  }
+  #welcome .header-content {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    padding: 0 300px;
+  }
+  #welcome .header-content .header-content-inner {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+  }
+  #welcome .header-content .header-content-inner p {
+    font-size: 18px;
+    margin-left: auto;
+    margin-right: auto;
+    color: #158c28;
+  }
 }
 .section-heading {
   margin-top: 0;
   font-size: 30px;
-  color: #37b34a;
+  color: #158c28;
 }
 .porkguy-desc {
   margin-top: 0;
   margin-bottom: 30px;
   font-size: 20px;
-  color: #37b34a;
+  color: #158c28;
 }
 .explain-text {
   font-size: 20px;
-  color: #37b34a;
+  color: #158c28;
   text-align: left;
   margin: 20px 0px;
 }
