--- a/pages/templates/org.html
+++ b/pages/templates/org.html
@@ -106,7 +106,7 @@
                     </tr>
                     <tr>
                         <td class="tb_label">計畫實行結果</td>
-                        <td class="tb_value"></td>
+                        <td class="tb_value">{{ project.result }}</td>
                     </tr>
                 </tbody>
             </table>
