TINY THING BIG STEP

--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -81,7 +81,7 @@
                                             <label for="organizations">社福機構</label>
                                             <div id="application" style="display:none;">
                                                 <div class="select-wrapper" id="year">
-                                                    <select name="demo-category" id="year">
+                                                    <select name="demo-category" id="yearly">
                                                         <option value="">- 年度 -</option>
                                                         <option value="103" selected>民國103年</option>
                                                         <option value="102">民國102年</option>
