--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -49,7 +49,7 @@
                                     <li>
                                         <a href="/" class="button fit big">豬肉俠公益地圖</a>
                                         <div class="pork-guy">
-                                            <img src="/static/img/pigman.png" />
+                                            <img src="/static/img/pigman2.png" />
                                         </div>
                                     </li>
                                     <li id="outeroption">
