--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -84,7 +84,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6">
                     <div class="service-box">
-                        <div class="header-img"><img src="/static/pages/img/pigman.png" id="porkimg"></div>
+                        <div class="header-img"><img src="/static/img/pigman2.png" id="porkimg"></div>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6 text-center">
