--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -120,7 +120,7 @@
                 <div id="blocker"></div>
             </div>
             <div id="return">
-                回大地圖
+                回主地圖
             </div>
             <div id="detail">
                 <div id="county_detail"></div>
