--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -106,12 +106,10 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">一個結合了臺灣公益彩券行資料與臺灣各社福與慈善基構資料的臺灣專屬公益地圖</h2>
                     <hr class="light">
-                    <h5 class="porkguy-desc">豬肉俠平常樂善好施，關心社會議題，對於幫助弱勢總是當仁不讓</h5>
-                    <h5 class="porkguy-desc">堪稱21世紀廖添丁，心中最大的心願就是台灣人人有肉吃</h5>                    
-                    <p class="explain-text">"OO彩券下期頭獎累積金額上看10億!..."，每當彩券頭獎金額新聞一出，便可看到各家彩券行前充滿著人潮，各個表情如此($~$)。豬肉俠每次看到此景便會陷入沉思 :</p>
+                    <h5 class="porkguy-desc">豬肉俠平常樂善好施，關心社會議題，對於幫助弱勢總是當仁不讓，堪稱21世紀廖添丁，心中最大的心願就是台灣人人有肉吃。"OO彩券下期頭獎累積金額上看10億!..."，每當彩券頭獎金額新聞一出，便可看到各家彩券行前充滿著人潮，各個表情如此($~$)。豬肉俠每次看到此景便會陷入沉思 :</h5>
                     <p class="explain-text-highlight">"難道大家都忘了台灣彩券的發行是為公益而存嗎?"</p>
                     <p class="explain-text-highlight">"是為了幫助弱勢嗎?"</p>
-                    <p class="explain-text">為了提醒社會大眾公益彩券的成立初衷，熱情滿滿的豬肉俠就馬上著手計畫 ......</p>
+                     <h5 class="porkguy-desc">為了提醒社會大眾公益彩券的成立初衷，熱情滿滿的豬肉俠就馬上著手計畫 ......</h5>
                     <a href="#services" class="btn btn-default btn-xl page-scroll">服務介紹</a>
                 </div>
             </div>
@@ -125,8 +123,13 @@
                     <h2 class="section-heading">我們的服務</h2>
                     <hr class="primary">
                 </div>
-                <div class="col-lg-12 text-center">
-                    <p></p>
+                <div class="col-lg-12 ">
+                    <p class="text-center">經過幾星期的努力，豬肉俠終於將他日夜苦思設計出來的服務完成了!</p>
+                    <p>台灣的彩券行數量已如超商般無處不在，而去年公益彩券銷售額額更達1322億元，公益彩券的盈餘與回饋金都是用於提供弱勢族群就業機會與提升社會福利上。另一方面，近年來台灣民眾年度公益捐款可達500億，相當於平均每個台灣人一年會捐出2713元，可見台灣人人樂於公益，看到這樣驚人的數據，豬肉俠便心想:"若是能讓這麼多買彩券的人看到一些社福機構計畫的資料，在沒中獎失望之餘也能覺得對社會有幫助而開心。對台灣許多的善心人士而言，也能從中了解自己給出去的幫助是否真的對社會有實質助益，而不是捐出去卻不知道最後用於何處"
+                    </p>
+                    <p>
+                    更重要的是，捐款如此之多，但量就是固定的，豬肉俠希望這些「肉」並不只落入較多媒體宣傳的大型社福慈善機構的手中，我們也希望這些善心人士們在看過資料後能了解並將這些捐款分配給真正需要的人們或較弱勢的社福團體，同時從圖中看出各縣市的社福資源不均的問題，在瀏覽自己所在現是的公益地圖時，也能關注自身編需要協助的社福團體。
+                    </p>
                 </div>
             </div>
         </div>
@@ -136,28 +139,28 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-usd wow bounceIn text-primary"></i>
                         <h3>公益彩券行</h3>
-                        <p class="text-muted">標記所有彩券行位置，同時顯示該行累計頭獎次數</p>
+                        <p class="text-left">標記所有彩券行位置，同時顯示該行累計頭獎次數</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>社服慈善機構</h3>
-                        <p class="text-muted">地圖上標記全台灣社福慈善機構地點，依年度為索引，顯示其申請到的回饋金補助金額</p>
+                        <p class="text-left">標記全台灣社福慈善機構地點，依年度為索引，顯示其申請到的補助金額</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-fire wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <i class="fa fa-4x fa-globe wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>資料圖象化</h3>
-                        <p class="text-muted">公益地圖各縣市會以顏色深淺來表示所得補助金額量多或少，讓您一目了然，了解各縣市社福資源不均的問題</p>
+                        <p class="text-left">公益地圖各縣市會以顏色深淺來表示所得補助金額量多或少，讓您一目了然，了解各縣市社福資源不均的問題</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-thumbs-up wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>資訊透明化</h3>
-                        <p class="text-muted">公布各個回饋金計畫審核內容，與得到補助後實行成果</p>
+                        <p class="text-left">公布各個回饋金計畫審核內容，與得到補助後實行成果，同時有留言與分享功能</p>
                     </div>
                 </div>
                 
