--- a/pages/templates/org.html
+++ b/pages/templates/org.html
@@ -120,7 +120,7 @@
             <a href="/"><button type="button" class="btn btn-default">Home</button></a>
             <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button"></div>            
         </div>  
-        <div class="fb-comments" data-href="/org/{$ org.id %}" data-numposts="5"></div>       
+        <div class="fb-comments" data-href="localhost:8000/org/{{ org.id }}" data-numposts="5"></div>       
     </div>  
 
     <!-- jQuery -->
