--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -119,6 +119,18 @@
                 <div id="map-canvas-3"></div>
                 <div id="blocker"></div>
             </div>
+            <div id="diagram">
+                <div class="word">圖示</div>
+                <div class="level">
+                    <p class="low">少</p>
+                    <div class="level1"></div>
+                    <div class="level2"></div>
+                    <div class="level3"></div>
+                    <div class="level4"></div>
+                    <div class="level5"></div>
+                    <p class="high">多</p>
+                </div>
+            </div>
             <div id="return">
                 回主地圖
             </div>
