--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -35,6 +35,7 @@
             var org_count = {{ organization_count_list|safe }};
         </script>
         <script type="text/javascript" src="/static/js/map.js"></script>
+        <script type="text/javascript" src="/static/js/merge.js"></script>
 
     </head>
     <body class="landing is-menu-visible">
