add talking bubble

--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -35,16 +35,21 @@
             var org_count = {{ organization_count_list|safe }};
         </script>
         <script type="text/javascript" src="/static/js/map.js"></script>
-
     </head>
     <body class="landing is-menu-visible">
+
         <!-- Header -->
             <header id="header" class="alt">
+            <div id="fundget-box">
+                <span class="arrow_l_int"></span>
+                <span class="arrow_l_out"></span>
+            </div>
                 <nav id="nav">
                     <ul>
                         <li class="special">
                             <button class="menuToggle button small">Menu</button>
                             <div id="menu">
+
                                 <ul>
                                     <li>
                                         <a href="/" class="button fit big">豬肉俠公益地圖</a>
@@ -149,6 +154,8 @@
             <script src="/static/js/skel.min.js"></script>
             <script src="/static/js/util.js"></script>
             <!--[if lte IE 8]><script src="/static/js/ie/respond.min.js"></script><![endif]-->
-            <script src="/static/js/main.js"></script>          
+            <script src="/static/js/main.js"></script>
+            <script src="/static/js/talk.js"></script>
+          
     </body>
 </html>
