--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -89,10 +89,10 @@
                 </div>
                 <div class="col-lg-8 col-md-6 text-center">
                     <div class="header-content-inner">
-                        <h1>豬肉俠公益地圖</h1>
+                        <h1>豬肉俠公益地圖v1.0</h1>
                         <hr>
                         <h3>"人人有肉吃，就是我的俠義之道"</h3>
-                        <a href="#about" class="btn btn-primary btn-xl page-scroll">瞭解更多</a>
+                        <a href="#about" class="btn btn-xl page-scroll">瞭解更多</a>
                     </div>           
                 </div>
             </div>           
@@ -103,13 +103,13 @@
     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-12 text-center">
                     <h2 class="section-heading">一個結合了臺灣公益彩券行資料與臺灣各社福與慈善基構資料的臺灣專屬公益地圖</h2>
                     <hr class="light">
-                    <h5 class="porkguy-desc">豬肉俠平常樂善好施，關心社會議題，對於幫助弱勢總是當仁不讓，堪稱21世紀廖添丁，心中最大的心願就是台灣人人有肉吃。"OO彩券下期頭獎累積金額上看10億!..."，每當彩券頭獎金額新聞一出，便可看到各家彩券行前充滿著人潮，各個表情如此($~$)。豬肉俠每次看到此景便會陷入沉思 :</h5>
+                    <p class="explain-text">豬肉俠平常樂善好施，關心社會議題，對於幫助弱勢總是當仁不讓，堪稱21世紀廖添丁，心中最大的心願就是台灣人人有肉吃。"OO彩券下期頭獎累積金額上看10億!..."，每當彩券頭獎金額新聞一出，便可看到各家彩券行前充滿著人潮，各個表情如此($~$)。豬肉俠每次看到此景便會陷入沉思 :</p>
                     <p class="explain-text-highlight">"難道大家都忘了台灣彩券的發行是為公益而存嗎?"</p>
                     <p class="explain-text-highlight">"是為了幫助弱勢嗎?"</p>
-                     <h5 class="porkguy-desc">為了提醒社會大眾公益彩券的成立初衷，熱情滿滿的豬肉俠就馬上著手計畫 ......</h5>
+                    <p class="explain-text-last">為了提醒社會大眾公益彩券的成立初衷，熱情滿滿的豬肉俠就馬上著手計畫 ......</p>
                     <a href="#services" class="btn btn-default btn-xl page-scroll">服務介紹</a>
                 </div>
             </div>
