--- a/map/static/css/main.css
+++ b/map/static/css/main.css
@@ -96,6 +96,48 @@
 		padding: 0;
 		z-index: 3;
 	}
+	#fundget-box {
+		width: 400px;
+		height: 250px;
+		opacity: 0.95;
+		background-color: #ffffff;
+		border-radius: 30px;
+		display: none;
+		border: solid 2px #8f8f8f;
+		position: absolute;
+		z-index: 1000;
+		position: inherit;
+		margin-left: 18%;
+		margin-top: 8%;
+		-webkit-box-shadow: 7px 10px 36px -15px rgba(0,0,0,0.75);
+		-moz-box-shadow: 7px 10px 36px -15px rgba(0,0,0,0.75);
+		box-shadow: 7px 10px 36px -15px rgba(0,0,0,0.75); 
+	}
+	#fundget-box .arrow_l_int{
+		width:0px;
+		height:0px;
+		border-width:15px;
+		border-radius: 5px;
+		border-style:solid;
+		border-color:transparent #333 transparent  transparent ;
+		position:absolute;
+		z-index: 1000;
+		top:60%;
+		left:-30px;
+	}
+	/*箭頭左-邊框*/
+	#fundget-box .arrow_l_out{
+		width:0px;
+		height:0px;
+		border-radius: 5px;
+		border-width:15px;
+		border-style:solid;
+		border-color:transparent #fff transparent transparent ;
+		position:absolute;
+		z-index: 1000;
+		top:60%;
+		left:-29px;
+	}
 	#diagram {
 		width:280px;
 		height:55px;
@@ -3418,7 +3460,7 @@
 		left: 0; 
 		top: 0;
 		width: 20em;
-		z-index: 10002;
+		z-index: 100;
 		box-shadow: inset 0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
 	}
 
