--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -46,6 +46,7 @@
             <div id="fundget-box">
                 <span class="arrow_l_int"></span>
                 <span class="arrow_l_out"></span>
+                <span class="msg"></span>
             </div>
                 <nav id="nav">
                     <ul>
