--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -57,7 +57,7 @@
                                     <li>
                                         <a href="/" class="button fit big">豬肉俠公益地圖</a>
                                         <div class="pork-guy">
-                                            <img src="/static/img/pigman2.png" />
+                                            <img id="pork-guy-pic" src="/static/img/pigman2.png" />
                                         </div>
                                     </li>
                                     <li id="outeroption">
@@ -112,8 +112,8 @@
                                                 </div>                                               
                                                 <ul>
                                                     <li>
-                                                        <input type="radio" id="applied" name="apply_options">
-                                                        <label for="applied">申請審核未過</label>
+                                                        <input type="radio" id="applied-nopass" name="apply_options">
+                                                        <label for="applied-nopass">申請審核未過</label>
                                                     </li>
                                                     <li>
                                                         <input type="radio" id="applied-pass" name="apply_options">
