--- a/pages/templates/org.html
+++ b/pages/templates/org.html
@@ -117,7 +117,8 @@
         {% endfor %}
         {% endif %}
         <div class="back">
-            <a href="/"><button type="button" class="btn btn-default">Home</button></a>
+            <a href="/"><button type="button" class="btn btn-default">首頁</button></a>
+            <a href="/map"><button type="button" class="btn btn-default">返回地圖</button></a>
             <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button"></div>            
         </div>  
         <div class="fb-comments" data-href="localhost:8000/org/{{ org.id }}" data-numposts="5"></div>       
