--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -77,7 +77,7 @@
                                         <div class="6u 12u$(small)">
                                             <input type="radio" id="charity" name="options">
                                             <label for="charity">彩券盈餘分配金</label>
-                                            <div class="select-wrapper" id="year2">
+                                            <div class="select-wrapper" id="year2" style="display:none;">
                                                 <select name="demo-category2" id="demo-category2">
                                                     <option value="">- 年度 -</option>
                                                     <option value="103" selected>民國103年</option>
@@ -87,10 +87,6 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <!-- <div class="6u$ 12u$(small)">
-                                            <input type="radio" id="charity" name="options">
-                                            <label for="charity">103年彩券盈餘分配金</label>
-                                        </div> -->
                                         <div class="6u 12u$(small)">
                                             <input type="radio" id="prize" name="options">
                                             <label for="prize">103年起中頭獎次數</label>
