--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -43,9 +43,54 @@
 
         <!-- Header -->
             <header id="header" class="alt">
-            <div id="fundget-box">
+            <div id="diagram-explain">
+                <span class="arrow_t_int"></span>
+                <span class="arrow_l_out"></span>
+                <div class="explain">
+                    <h4>獲得補助金額、中獎次數多寡</h4>
+                    <p>顏色越深，分配到的補助就越多!這樣我們就能清楚看出各縣市補助的差距。各縣市社福資源不均、城鄉差距的問題便能一目了然!</p>
+                </div>
+            </div>
+            <div id="talk-box">
                 <span class="arrow_l_int"></span>
                 <span class="arrow_l_out"></span>
+                <div class="fundget-msg msg">
+                    <h4>公益彩券回饋金</h4>
+                    <p>目前台灣公益彩券之發行機構為中國信託(民國103年到112年)，藉此中國信託每年保證提供固定的27億元來幫助政府社福資源，分配給各地方政府，讓各社福慈善機構申請</p>
+                    <div class="tiny">資料來源: 台灣彩券</div>
+                </div>
+                <div class="profit-msg msg">
+                    <h4>公益彩券盈餘分配</h4>
+                    <p>是彩券售出總面額扣除營運成本和銷管費用後所得的盈餘，其中50%提供給地方政府社福支出，而分配比例則是按照前一年度銷售金額比重去分配的，也就是說哪個縣市的人買越多彩券拿到的盈餘分配就越多喔!!</p>
+                    <div class="tiny">資料來源: 台灣彩券</div>
+                </div>
+                <div class="prize-msg msg">
+                    <h4>彩券行頭獎次數</h4>
+                    <p>點選這個可以看到各縣市彩券行大樂透、威力彩、今彩539總共的中頭獎次數喔!</p>
+                </div>
+                <div class="charity-msg msg">
+                    <h4>社福機構</h4>
+                    <p>點選這個顯示目前所在縣市所有社福機構，點選豬鼻子地標可以看到該機構的地址和那年度的申請計畫狀況。</p>
+                    <p>先選擇一個年度吧!</p>
+                </div>
+                <div class="charity-applied-nopass-msg msg">
+                    <h4>回饋金計畫申請未過的社福機構</h4>
+                    <p>什麼?! 有申請卻被否決!! 讓我們來關心一下!</p>
+                    <p>點選這個可以看到目前所在縣市該年度有申請補助，計畫卻被否決的社福機構。點選豬鼻子地標，也可以看到他們被否決的原因，這樣我們就會知道問題出在哪裡，就能想辦法幫助他們了。</p>
+                </div>
+                <div class="charity-applied-pass-msg msg">
+                    <h4>回饋金計畫申請通過的社福機構</h4>
+                    <p>點選這個可以看到目前所在縣市該年度有申請到回饋金補助的社福機構，點選豬鼻子地標，就可以看到他們拿到的金額，想要了解更多這個機構的歷年申請計畫和執行結果，點選詳細資訊就可以看到囉!既然有拿到錢，我們就一定要看一下他的執行結果! 才不會錢捐出去不知道跑去哪。</p>
+                </div>
+                <div class="charity-noapplied-msg msg">
+                    <h4>未申請回饋金計畫的社福機構</h4>
+                    <p>點選這個可以看到目前所在縣市該年度沒申請補助的社福機構。點選豬鼻子地標，數量很多，雖然他們沒有提出申請但是想必也是需要幫助的!</p>
+                </div>
+                <div class="lottery-store-msg msg">
+                    <h4>彩券行</h4>
+                    <p>點選這個可以看到目前所在縣市所有的彩券行的豬鼻子地標，點擊地標就可以看到他的地址和頭獎次數喔!看到次數很高得有空可以去光顧一下，買彩券給自己希望也給社福希望!</p>
+                </div>
+                <!-- <a target="_blank" href="http://www.taiwanlottery.com.tw/info/welfare/profit.asp" class="tiny">更多詳細介紹</p> -->
             </div>
                 <nav id="nav">
                     <ul>
@@ -87,10 +132,6 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <!-- <div class="6u$ 12u$(small)">
-                                            <input type="radio" id="charity" name="options">
-                                            <label for="charity">103年彩券盈餘分配金</label>
-                                        </div> -->
                                         <div class="6u 12u$(small)">
                                             <input type="radio" id="prize" name="options">
                                             <label for="prize">103年起中頭獎次數</label>
