--- a/pages/static/pages/css/home.css
+++ b/pages/static/pages/css/home.css
@@ -143,7 +143,7 @@ header .header-content .header-content-inner h3 {
 #welcome {
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: initial;
@@ -182,6 +182,14 @@ header .header-content .header-content-inner h3 {
   color: #1a1919;
   font-size: 30px;
   margin-bottom: 50px;
+}
+#welcome .header-content-inner a {
+  margin-top: 40px;
+  background-color: #737373;
+}
+#welcome .header-content-inner a:hover {
+  margin-top: 40px;
+  background-color: #8f8f8f;
 }
 
 @media (min-width: 768px) {
