--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -110,7 +110,7 @@
                     <p class="explain-text-highlight">"難道大家都忘了台灣彩券的發行是為公益而存嗎?"</p>
                     <p class="explain-text-highlight">"是為了幫助弱勢嗎?"</p>
                     <p class="explain-text-last">為了提醒社會大眾公益彩券的成立初衷，熱情滿滿的豬肉俠就馬上著手計畫 ......</p>
-                    <a href="#services" class="btn btn-default btn-xl page-scroll">服務介紹</a>
+                    <a href="#services" class="btn btn-default btn-xl page-scroll ser">服務介紹</a>
                 </div>
             </div>
         </div>
