--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -216,6 +216,7 @@
             <!--[if lte IE 8]><script src="/static/js/ie/respond.min.js"></script><![endif]-->
             <script src="/static/js/main.js"></script>
             <script src="/static/js/talk.js"></script>
+            <script src="/static/js/merge.js"></script>
           
     </body>
 </html>
