change county detail as clicking markers and fix pig talk

--- a/map/static/css/main.css
+++ b/map/static/css/main.css
@@ -3610,6 +3610,9 @@
 			margin-left: 60px;
 			color: #ffed94;
 		}
+		/*#year2 {
+			display: block;
+		}*/
 		@media screen and (max-width: 736px) {
 
 			#menu {
