--- a/map/templates/map.html
+++ b/map/templates/map.html
@@ -180,9 +180,8 @@
         <!-- Page Wrapper -->
             <div id="map-canvas-1"></div>
             <div id="outer_islands">
-                <div id="map-canvas-2"></div>
-                <div id="map-canvas-3"></div>
-                <div id="blocker"></div>
+                <div>連江縣<div id="map-canvas-2"></div></div> 
+                <div id="map3-container">金門縣<div id="map-canvas-3"></div><div id="blocker"></div></div> 
             </div>
             <div id="diagram">
                 <div class="word">圖示</div>
